# pubmed_playground

./: main.py  pyproject.toml  requirements.txt  requirements.txt~
lab/: google_genai.py  keyManager.py  obsidian_transformer.py  paperscraper_demo.py  pmc_searcher.py  pubmed_agent.py  pubmed_demo.py  pubmed_query_agent.py  query_helper.py
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pmc_results/: pmc_search_20250323_130215.json  pmc_search_20250323_131052.json  pmc_search_20250323_131308.json  pmc_search_20250323_131402.json  pmc_search_20250323_132030.json  pmc_search_20250323_132201.json  pmc_search_20250323_132251.json
pubmed_results/: pubmed_search_20250323_133611.json  pubmed_search_20250323_141038.json  pubmed_search_20250323_142011.json  pubmed_search_20250323_142454.json  pubmed_search_20250323_143101.json  pubmed_search_20250323_143617.json  pubmed_search_20250323_145005.json
references/: Google_Search_SerpApi.md  REST API _ Unpaywall.md  entrez.md  google-genai.md  obsidian.md  pubget.md  pubmed_query.md  pubmed_query_instructions.md
search_results/: pubmed_cancer_immunotherapy_20250324_234505.json  pubmed_diabetes_drug_therapy_20250324_235857.json  pubmed_labour_pain_treatment_20250323_190142.json  pubmed_severe_burn_patients_treatment_20250323_184612.json  pubmed_severe_malaria_treatment_20250323_183822.json  pubmed_sjogren_s_syndrome_diagnosis_r_20250324_232750.json  query_treatment_of_severe_malaria_20250323_173517.json  query_treatment_of_severe_malaria_20250323_175756.json  query_treatment_of_severe_malaria_20250323_180535.json  treatment_of_severe_malaria_20250323_173515.json  treatment_of_severe_malaria_20250323_175159.json  treatment_of_severe_malaria_20250323_175754.json  treatment_of_severe_malaria_20250323_180533.json
(+28 files in other folders)
